# fastapi-post

./: .gitignore  Dockerfile  database.py  main.py  models.py  post.db  post.sqbpro  pyproject.toml  requirements.txt  schemas.py
auth/: jwt_handler.py
bookmarks/: bookmark_router.py  bookmark_service.py
posts/: post_router.py  post_service.py
users/: user_router.py  user_service.py
utils/: auth_google.py  file_s3.py  storage_service.py
